changing deprecated class